# btce_bot

./: .gitignore  README.md  commit.sh
launch/: cell.launch  lots_of_macd.launch  plotter.launch  ticker.launch
src/: README.md
src/btce_health/: CMakeLists.txt  package.xml
src/btce_health/src/: btce_health_node.cpp
src/btce_health/srv/: server_time.srv
src/cell_phone_interface/: CMakeLists.txt  package.xml
src/cell_phone_interface/scripts/: cell_phone_interface_node.py
src/cell_phone_interface/srv/: send_text_msg.srv
src/macd_sell_signal/: CMakeLists.txt  package.xml
src/macd_sell_signal/include/macd_sell_signal/: macd_indicator.h
src/macd_sell_signal/msg/: macd.msg  sell.msg
src/macd_sell_signal/src/: macd_indicator.cpp  macd_sell_signal_node.cpp
src/macd_sell_signal/srv/: macd_array.srv
src/plot_macd/: CMakeLists.txt  package.xml
src/plot_macd/scripts/: plot_macd_node.py
src/save_load_ticker/: CMakeLists.txt  package.xml
src/save_load_ticker/src/: save_load_ticker_node.cpp
src/save_load_ticker/srv/: history.srv
src/sell_signal/: CMakeLists.txt  package.xml
src/sell_signal/src/: sell_signal_node.cpp
src/sell_signal_filter/: CMakeLists.txt  package.xml
src/sell_signal_filter/src/: sell_signal_filter_node.cpp
src/sell_signal_filter/srv/: history.srv
src/ticker_publisher/: CMakeLists.txt  package.xml
src/ticker_publisher/msg/: ticker.msg
src/ticker_publisher/scripts/: test_python_node.py  ticker_publisher_node.py
src/trade_interface/: CMakeLists.txt  package.xml
src/trade_interface/msg/: active_orders.msg  get_info.msg  trans_history.msg
src/trade_interface/scripts/: test_interface.py  trade_interface_node.py
src/trade_interface/srv/: active_orders_all.srv  cancel_order.srv  get_info_all.srv  make_trade.srv  trans_history_all.srv
src/user_interface/: CMakeLists.txt  package.xml
src/user_interface/src/: user_interface_node.cpp
src/wallet/: CMakeLists.txt  package.xml
src/wallet/src/: wallet_node.cpp
