<?xml version="1.0"?>
<package>
  <name>macd_sell_signal</name>
  <version>0.0.1</version>
  <description>This package will publish when to sell based on a moving average convergence diverence indicator</description>

  <maintainer email="cole.robert.c@gmail.com">Bob Cole</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>save_load_ticker</build_depend>
  <build_depend>ticker_publisher</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>save_load_ticker</run_depend>
  <run_depend>ticker_publisher</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>