<?xml version="1.0"?>
<package>
  <name>ticker_publisher</name>
  <version>0.0.1</version>
  <description>This package grabs ticker data from BTC-e and publishes it</description>

  <maintainer email="colerc2@miamioh.edu">Bob Cole</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>